Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2 class="typing-line" id="line2"></h2>
         <h2 class="typing-line" id="line3"></h2>
       </div>
-      <p class="tagline">Engineering the Future of Mobility | Driven by Innovation & Design</p>
+      <p class="tagline">Fourth-Year Mechanical Engineering Student | Seeking Full-Time Engineering Opportunities</p>
       <div class="hero-buttons">
         <a href="resume.pdf" target="_blank" class="btn white-btn" id="resumeBtn">View Résumé</a>
         <button id="funFactsBtn" class="btn-secondary white-btn">Fun Facts</button>
@@ -46,19 +46,19 @@
  <!-- ABOUT -->
 <section id="about">
   <h2>About Me</h2>
-
-  <div class="about-card">
-    <p>
-      I’m Rutej Talati, a mechanical engineer passionate about uniting mechanical precision with intelligent control and design. My work focuses on automotive systems, mechatronics, and data-driven engineering — building machines that think, adapt, and perform.
-    </p>
-    <p>
-      As an undergraduate at Penn State University, I’ve worked across autonomous vehicle research, CFD-based aerodynamics, and NVH optimization. Whether it’s refining a drivetrain’s smoothness or simulating airflow over a Formula 1 car, I enjoy turning theory into measurable performance.
-    </p>
-    <p>
-      Beyond engineering, I’m fascinated by how innovation, leadership, and design thinking shape the next generation of mobility. When not building or analyzing, I’m probably breaking down F1 strategies, experimenting with robotics, or sketching new concepts for smart mobility systems.
-    </p>
-  </div>
+<div class="about-card">
+  <p>
+    I’m Rutej Talati, a mechanical engineer passionate about uniting mechanical precision with intelligent control and design. My work focuses on automotive systems, mechatronics, and data-driven engineering, building machines that think, adapt, and perform.
+  </p>
+  <p>
+    As an undergraduate at Penn State University, I’ve worked across autonomous vehicle research, CFD-based aerodynamics, and NVH optimization. Whether it’s refining a drivetrain’s smoothness or simulating airflow over a Formula 1 car, I enjoy turning theory into measurable performance.
+  </p>
+  <p>
+    Beyond engineering, I’m fascinated by how innovation, leadership, and design thinking shape the next generation of mobility. When not building or analyzing, I’m probably breaking down F1 strategies, experimenting with robotics, or sketching new concepts for smart mobility systems.
+  </p>
+</div>
 </section>
+
 
 
 
@@ -284,38 +284,46 @@
   <!-- CONTACT -->
   <section id="contact">
   <h2>Contact</h2>
-
   <div class="contact-grid">
-    <div class="contact-card">
-      <button class="contact-btn" data-contact="email">📧 Email Me</button>
-      <p class="contact-info" id="email">talatirutej@gmail.com</p>
-    </div>
 
     <div class="contact-card">
-      <button class="contact-btn" data-contact="linkedin">💼 LinkedIn</button>
-      <p class="contact-info" id="linkedin">
-        <a href="https://linkedin.com/in/rutejtalati" target="_blank">linkedin.com/in/rutejtalati</a>
+      <div class="contact-label">📧 Email Me</div>
+      <p class="contact-info">
+        <a href="mailto:talatirutej@gmail.com">talatirutej@gmail.com</a>
       </p>
     </div>
 
     <div class="contact-card">
-      <button class="contact-btn" data-contact="phoneus">📱 Phone (U.S.)</button>
-      <p class="contact-info" id="phoneus">+1 (814) 852-9229</p>
-    </div>
-
-    <div class="contact-card">
-      <button class="contact-btn" data-contact="phonein">📞 Phone (India)</button>
-      <p class="contact-info" id="phonein">+91 98204 01586</p>
-    </div>
-
-    <div class="contact-card">
-      <button class="contact-btn" data-contact="portfolio">🌐 Portfolio</button>
-      <p class="contact-info" id="portfolio">
-        <a href="https://rutejtalati.github.io/Portfolio-/" target="_blank">rutejtalati.github.io/Portfolio-/</a>
+      <div class="contact-label">💼 LinkedIn</div>
+      <p class="contact-info">
+        <a href="https://linkedin.com/in/rutejtalati" target="_blank">
+          linkedin.com/in/rutejtalati
+        </a>
       </p>
     </div>
+
+    <div class="contact-card">
+      <div class="contact-label">📞 U.S. Phone</div>
+      <p class="contact-info">+1 (814) 852-9229</p>
+    </div>
+
+    <div class="contact-card">
+      <div class="contact-label">📱 India Phone</div>
+      <p class="contact-info">+91 98204 01586</p>
+    </div>
+
+    <div class="contact-card">
+      <div class="contact-label">🌐 Portfolio</div>
+      <p class="contact-info">
+        <a href="https://rutejtalati.github.io/Portfolio-/" target="_blank">
+          rutejtalati.github.io
+        </a>
+      </p>
+    </div>
+
   </div>
 </section>
+
 
 
   <footer><p>© 2025 Rutej Talati | Built in VS Code</p></footer>
