Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 
-<!-- PAGE SCROLL PROGRESS BAR -->
-<div id="scrollProgressContainer">
-  <div id="scrollProgressBar"></div>
-</div>
+<body>
+  <!-- PAGE SCROLL PROGRESS BAR -->
+  <div id="scrollProgressContainer">
+    <div id="scrollProgressBar"></div>
+  </div>
+
 
 <body>
   <header id="hero">
@@ -333,3 +335,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
