Restore index.html content

--- a/index.html
+++ b/index.html
@@ -281,48 +281,27 @@
 
 
   <!-- CONTACT -->
-  <section id="contact">
+ <section id="contact">
   <h2>Contact</h2>
-  <div class="contact-grid">
+  <p>You can also reach me using the icons below. Thank you for stopping by!</p>
 
-    <div class="contact-card">
-      <div class="contact-label">📧 Email Me</div>
-      <p class="contact-info">
-        <a href="mailto:talatirutej@gmail.com">talatirutej@gmail.com</a>
-      </p>
-    </div>
-
-    <div class="contact-card">
-      <div class="contact-label">💼 LinkedIn</div>
-      <p class="contact-info">
-        <a href="https://linkedin.com/in/rutejtalati" target="_blank">
-          linkedin.com/in/rutejtalati
-        </a>
-      </p>
-    </div>
-
-    <div class="contact-card">
-      <div class="contact-label">📞 U.S. Phone</div>
-      <p class="contact-info">+1 (814) 852-9229</p>
-    </div>
-
-    <div class="contact-card">
-      <div class="contact-label">📱 India Phone</div>
-      <p class="contact-info">+91 98204 01586</p>
-    </div>
-
-    <div class="contact-card">
-      <div class="contact-label">🌐 Portfolio</div>
-      <p class="contact-info">
-        <a href="https://rutejtalati.github.io/Portfolio-/" target="_blank">
-          rutejtalati.github.io
-        </a>
-      </p>
-    </div>
-
+  <div class="contact-icons">
+    <a href="mailto:rutej.talati@example.com" class="icon email">
+      <i class="fas fa-envelope"></i>
+    </a>
+    <a href="tel:+1234567890" class="icon phone1">
+      <i class="fas fa-phone"></i>
+    </a>
+    <a href="tel:+1987654321" class="icon phone2">
+      <i class="fas fa-phone"></i>
+    </a>
+    <a href="https://linkedin.com/in/rutejtalati" target="_blank" class="icon linkedin">
+      <i class="fab fa-linkedin-in"></i>
+    </a>
   </div>
-</section>
 
+  <button id="backToTop">Back to Top</button>
+</section>
 
 
   <footer><p>© 2025 Rutej Talati | Built in VS Code</p></footer>
@@ -332,5 +311,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
