Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </p>
     <button class="learn-more">Show More</button>
 
-    <div class="exp-details hidden">
+    <div class="exp-details">
       <ul class="exp-bullets">
         <li>🔧 Conducted component and subsystem benchmarking for <strong>mini-excavators, backhoe loaders, and hydraulic systems</strong>, identifying <strong>10+ efficiency opportunities</strong> across 3 OEMs.</li>
         <li>📊 Supported <strong>PwC’s Construction Equipment Market Intelligence</strong> by analyzing Caterpillar and Tata-Hitachi platforms for <strong>cost and product-strategy optimization</strong>.</li>
@@ -104,7 +104,7 @@
     </p>
     <button class="learn-more">Show More</button>
 
-    <div class="exp-details hidden">
+    <div class="exp-details">
       <ul class="exp-bullets">
         <li>🛰️ Conducted market sizing and competitor benchmarking across <strong>logistics, infrastructure, and agriculture sectors</strong>.</li>
         <li>📈 Analyzed <strong>12+ drone-tech startups</strong> from IITs and IISc to assess investment and partnership potential for GIS mapping solutions.</li>
@@ -123,7 +123,7 @@
     </p>
     <button class="learn-more">Show More</button>
 
-    <div class="exp-details hidden">
+    <div class="exp-details ">
       <ul class="exp-bullets">
         <li>📘 Assisted in grading and guiding <strong>MATLAB-based vibration simulations</strong> and experimental analysis for 60+ students.</li>
         <li>🔍 Helped students apply vibration theory to <strong>NVH and dynamic modeling</strong> in mechanical and automotive systems.</li>
@@ -142,7 +142,7 @@
     </p>
     <button class="learn-more">Show More</button>
 
-    <div class="exp-details hidden">
+    <div class="exp-details">
       <ul class="exp-bullets">
         <li>⚛️ Reviewed assignments and labs on <strong>quantum mechanics, atomic models, and wave-particle duality</strong> for 70+ students each semester.</li>
         <li>📈 Enhanced feedback efficiency by <strong>reducing grading turnaround by 30%</strong> through digital evaluation workflows.</li>
@@ -222,7 +222,7 @@
     </p>
     <button class="learn-more">Show More</button>
 
-    <div class="exp-details hidden">
+    <div class="exp-details ">
       <ul class="exp-bullets">
         <li>🚗 Designed and implemented the team’s <strong>LiDAR safety cutoff system</strong> with redundant sensor-fusion logic, achieving <strong>zero false positives</strong> during field trials.</li>
         <li>🧠 Coordinated a <strong>12-member cross-functional team</strong> across software, electrical, and controls subsystems to integrate autonomous path-planning logic.</li>
@@ -241,7 +241,7 @@
     </p>
     <button class="learn-more">Show More</button>
 
-    <div class="exp-details hidden">
+    <div class="exp-details ">
       <ul class="exp-bullets">
         <li>🏎️ Designed a new <strong>tubular steel spaceframe chassis</strong> that improved torsional rigidity by <strong>18%</strong> while cutting overall mass by <strong>9%</strong>.</li>
         <li>🧩 Supervised <strong>finite element simulations in ANSYS</strong> to validate suspension mount stiffness and rollover strength.</li>
@@ -260,7 +260,7 @@
     </p>
     <button class="learn-more">Show More</button>
 
-    <div class="exp-details hidden">
+    <div class="exp-details">
       <ul class="exp-bullets">
         <li>🌬️ Contributed to aerodynamic blade design using MATLAB-based power coefficient simulations.</li>
         <li>⚙️ Built and tested a scaled turbine prototype, achieving <strong>8% higher efficiency</strong> at moderate wind speeds (10–12 m/s).</li>
@@ -278,7 +278,7 @@
     </p>
     <button class="learn-more">Show More</button>
 
-    <div class="exp-details hidden">
+    <div class="exp-details">
       <ul class="exp-bullets">
         <li>🤝 Attended professional development sessions with industry speakers from <strong>Lockheed Martin</strong> and <strong>Boeing</strong>.</li>
         <li>📈 Mentored underclassmen in <strong>CAD modeling</strong> and <strong>resume preparation</strong> for internship placement.</li>
@@ -289,28 +289,37 @@
 </section>
 
 
-  <!-- CONTACT -->
+
  <section id="contact">
   <h2>Contact</h2>
   <p>You can also reach me using the icons below. Thank you for stopping by!</p>
 
   <div class="contact-icons">
-    <a href="mailto:rutej.talati@example.com" class="icon email">
-      <i class="fas fa-envelope"></i>
-    </a>
-    <a href="tel:+18148529229" class="icon phone1">
-      <i class="fas fa-phone"></i>
-    </a>
-    <a href="tel:+919820401586" class="icon phone2">
-      <i class="fas fa-phone"></i>
-    </a>
-    <a href="https://linkedin.com/in/rutejtalati" target="_blank" class="icon linkedin">
-      <i class="fab fa-linkedin-in"></i>
-    </a>
-  </div>
+    <div class="contact-item">
+      <a href="mailto:talatirutej@gmail.com" class="icon email">
+        <i class="fas fa-envelope"></i>
+      </a>
+      <span class="contact-info">talatirutej@gmail.com</span>
+    </div>
 
-  <button id="backToTop">Back to Top</button>
+    <div class="contact-item">
+      <a href="tel:+18148529229" class="icon phone">
+        <i class="fas fa-phone"></i>
+      </a>
+      <span class="contact-info">+1 (814) 852-9229</span>
+    </div>
+
+    <div class="contact-item">
+      <a href="https://linkedin.com/in/rutejtalati" target="_blank" class="icon linkedin">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+      <span class="contact-info">linkedin.com/in/rutejtalati</span>
+    </div>
+  </div>
+   <!-- ✅ Back to Top Button -->
+  <button id="backToTop" class="back-to-top">⬆ Back to Top</button>
 </section>
+
 
 
   <footer><p>© 2025 Rutej Talati | Built in VS Code</p></footer>
@@ -320,7 +329,6 @@
   <script src="script.js"></script>
 </body>
 </html>
-
 
 
 
